添加设置窗口及相关类和UI文件

--- a/settingwindow.ui
+++ b/settingwindow.ui
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <author/>
+ <comment/>
+ <exportmacro/>
+ <class>SettingWindow</class>
+ <widget class="QDialog" name="SettingWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -29,234 +31,14 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>101</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>打开顺序反转</string>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox_2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>151</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>拼接后自动删除原图片</string>
-   </property>
-  </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>190</y>
-     <width>191</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="2,1">
-    <item>
-     <widget class="QLabel" name="label_5">
-      <property name="text">
-       <string>特征点检测方式</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QComboBox" name="comboBox_5">
-      <item>
-       <property name="text">
-        <string>SIFT</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>SURF</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>ORB</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>110</y>
-     <width>181</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,2">
-    <item>
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>拼接方式</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QComboBox" name="comboBox_2">
-      <item>
-       <property name="text">
-        <string>低分辨率放大</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>高分辨率缩小</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>直接拼接</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>70</y>
-     <width>125</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>保存格式</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QComboBox" name="comboBox">
-      <item>
-       <property name="text">
-        <string>PNG</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>JPG</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>110</y>
-     <width>159</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_3">
-    <item>
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>填充颜色</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QComboBox" name="comboBox_3">
-      <item>
-       <property name="text">
-        <string>透明(png有效)</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>黑</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>白</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>150</y>
-     <width>238</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_4">
-    <item>
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>缩放方式</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QComboBox" name="comboBox_4">
-      <item>
-       <property name="text">
-        <string>双线性插值</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>最近邻插值</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>使用像素区域关系进行重采样</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>4x4像素邻域的双三次插值</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>8x8像素邻域的Lanczos插值</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-   </layout>
-  </widget>
  </widget>
+ <pixmapfunction/>
  <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>SettingWindow</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -272,7 +54,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>SettingWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
