--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>ImageSplicing</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_3" stretch="1,1,5">
+   <layout class="QVBoxLayout" name="verticalLayout_3" stretch="1,1,40">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="10,1">
       <item>
@@ -113,7 +113,17 @@
      </layout>
     </item>
     <item>
-     <widget class="QListWidget" name="listImageFilesWidget"/>
+     <widget class="QListWidget" name="listImageFilesWidget">
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAsNeeded</enum>
+      </property>
+      <property name="sizeAdjustPolicy">
+       <enum>QAbstractScrollArea::AdjustToContents</enum>
+      </property>
+     </widget>
     </item>
     <item>
      <widget class="QGraphicsView" name="graphicsView_result">
@@ -130,7 +140,7 @@
      <x>0</x>
      <y>0</y>
      <width>1366</width>
-     <height>23</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
